# localwriter

./: .gitignore  AGENTS.md  AGENT_SEARCH.md  Accelerators.xcu  Addons.xcu  CHANGELOG.md  CHAT_SIDEBAR_ROADMAP.md  Calc support from LibreCalc.md  Chat Sidebar Improvement Plan.md  DEVEL.md  EVALUATION_PLAN_DETAILED.md  EVAL_DEV_PLAN.md  LANGCHAIN_PLAN.md  MCP_MAIN_THREAD_DRAIN.md  MCP_PROTOCOL.md  MISTRAL_IMPROVEMENTS.md  Makefile  Makefile.local-dist  QwenCostello.odt  README.md  SECTION_REPLACE_ISSUE.md  SECTION_REPLACE_RANGE_OPTIONS.md  STREAMING_AND_TOOL_CALLING.md  THREADING_EXPLANATION.md  XPromptFunction.rdb  build.sh  chat_panel.py  debugging_combobox_report.md  description.xml  document_tools.py  install.ps1  install.sh  localwriter.oxt  main.py  markdown_support.py  prompt_function.py  pyproject.toml  streaming_deltas.py
LocalWriterDialogs/: ChatPanelDialog.xdl  EditInputDialog.xdl  EvalDialog.xdl  SettingsDialog.xdl  dialog.xlb  script.xlb
builder/: Dockerfile  build.sh  docker-compose.yml
core/: api.py  async_stream.py  calc_address_utils.py  calc_bridge.py  calc_error_detector.py  calc_inspector.py  calc_manipulator.py  calc_sheet_analyzer.py  calc_tests.py  calc_tools.py  config.py  constants.py  default_models.py  document.py  document_tools.py  draw_bridge.py  draw_tools.py  eval_runner.py  eval_runner_tests.py  format_support.py  format_tests.py  image_service.py  logging.py  markdown_support.py  mcp_server.py  mcp_thread.py  pricing.py  smol_model.py  streaming_deltas.py  uno_ui_helpers.py  writer_ops.py
docs/: README.md  impress-roadmap.md  (+4 more)
(+291 files in other folders)
