[project]
name = "localwriter"
dynamic = ["version"]
description = "LibreOffice AI writing assistant with MCP server"
requires-python = ">=3.8"

[project.optional-dependencies]
dev = [
    "pyyaml",
    "pytest",
]

[tool.setuptools.dynamic]
version = {attr = "plugin.version.EXTENSION_VERSION"}

[tool.setuptools.packages.find]
include = ["plugin*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
